# networking-avaya

./: .coveragerc  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst  installation.rst  usage.rst
networking-avaya/: __init__.py
networking_avaya/: __init__.py
networking_avaya/db/: models.py
networking_avaya/db/migration/alembic_migrations/: env.py
networking_avaya/db/migration/alembic_migrations/versions/: EXPAND_HEAD  f5241c762eb6_initial_db_version.py
networking_avaya/db/migration/alembic_migrations/versions/mitaka/expand/: 78bdf08ad4ce_avaya_type_isid.py  88ac6f7d8899_host_mapping.py  b02ec0506c4a_openstack_id.py  c10be324e57f_switch_dynamic_mapping.py
networking_avaya/ml2/: const.py  mapping_parser.py
networking_avaya/ml2/agent/: avaya_discovery_agent.py  avaya_mapping_agent.py
networking_avaya/ml2/drivers/: mech_avaya.py  rpc.py  type_isid.py  type_vlan.py
networking_avaya/ml2/utils/: lldp_catcher.py
networking_avaya/sdn/: client.py
networking_avaya/tests/: fake_mapping_agent.py  test_networking-avaya.py
networking_avaya/tests/unit/db/: test_models.py
networking_avaya/tests/unit/ml2/drivers/: test_mech_avaya.py  test_type_isid.py
networking_avaya/tests/unit/sdn/: test_client.py
releasenotes/source/: conf.py  index.rst
