[metadata]
name = networking-avaya
summary = Neutron ML2 driver and agent for Avaya SDN
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    networking_avaya

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_avaya/locale
domain = networking_avaya

[update_catalog]
domain = networking_avaya
output_dir = networking_avaya/locale
input_file = networking_avaya/locale/networking_avaya.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_avaya/locale/networking_avaya.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source

[entry_points]
console_scripts =
    avaya-discovery-agent = networking_avaya.ml2.agent.avaya_discovery_agent:main
    avaya-lldp-catcher = networking_avaya.ml2.utils.lldp_catcher:main
    avaya-mapping-agent = networking_avaya.ml2.agent.avaya_mapping_agent:main
neutron.ml2.type_drivers =
    avaya_isid = networking_avaya.ml2.drivers.type_isid:AvayaIsidTypeDriver
    avaya_vlan = networking_avaya.ml2.drivers.type_vlan:AvayaVlanTypeDriver
neutron.ml2.mechanism_drivers =
    avaya_ml2 = networking_avaya.ml2.drivers.mech_avaya:AvayaMechanismDriver
neutron.db.alembic_migrations =
    networking-avaya = networking_avaya.db.migration:alembic_migrations
